k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality
spec:
  selector:
    app: air-quality
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
