k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: air-quality
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: air.<your-choice>.cirrus.ucar.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: air-quality
                port:
                  number: 80
